# text_searcher

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  scanner.cpp  scanner.h  tests.cpp  text_searcher.pro
tests/case3/: Text File1
